fidoconfig 0.6
--------------

	
Mon Feb 15 18:28:21 CET 1999
- included sergeys patch for a correct readLine()
  Max Levenkov:
- forwardRequests option supported by fidoconfig and tparser
- changed the name of some enumerations
- added forwardPkt statement (on, secure, off) it will be implemented by tobi
- added autoCreateFile statement
	
----- cvs ci ------
Sun Feb 14 12:57:04 CET 1999
- included new fconf2fidogate from Gabriel
- applied patches from Antonio Perez so there is
  no need for the system calls in fconf2*

----- cvs ci ------
Fr  12 Feb 1999 14:02:37 CET [tobi]
- Revised makeUniqueDosFilename. It does not have to sleep before
  returning a file name now and is even more unique than previously :-)

----- cvs ci ------
Thu Feb 11 15:33:36 CET 1999
- fixed a small warning, where a time was compared to a NULL Pointer

----- cvs ci ------	
Wed Feb 10 16:04:46 MET 1999
- fixed a null pointer bug in tparser
	
----- cvs ci ------
Wed Feb 10 14:50:04 MET 1999 [tobi]
- added makeUniqueDosFilename() which can be used to create more or
  less unique PKT file names. See the comments in common.c for details.

----- cvs ci ------
Thu Feb  4 00:34:55 CET 1999
- fixed a bug in makefile.lnx which leads to the behaviour that
  libfidoconfig.so.$(VER) is not newly generated.
Wed Feb  3 23:23:06 CET 1999
- added isLinkOfArea()
Wed Feb  3 12:32:56 CET 1999
- added getConfigFileNameForPogram() which can be used to search for
  config-files in a way similar to fidoconfig. See header file for exact
  description.

----- cvs ci ------
Wed Jan 27 18:36:53 CET 1999
- fixed many null pointer seg-faults
----- cvs ci ------
Fri Jan 22 00:00:04 CET 1999
- added LinkWithImportLog added (gerald)
- tailing spaces will be killed in every line (gerald)

----- cvs ci ------
Tue Jan 19 19:46:05 CET 1999
- changed makefile for use without installing the libraries
----- cvs ci ------
- changed public to publicDir

----- cvs ci ------
Mon Jan 18 17:16:24 CET 1999