@@ -1,6 +1,11 @@
 fidoconfig 0.6
 --------------
 
+Wed Feb 17 20:07:00 CET 1999
+  Gabriel Plutzar:
+- added a new remap statment. It takes the parameters
+  ToName,OldAddr,NewAddr, seperated by commas. ToName or OldAddr may be *.
+  If a Netmail meets the ToName and OldAddr Criteria, it is sent to NewAddr.
 	
 Mon Feb 15 18:28:21 CET 1999
 - included sergeys patch for a correct readLine()
